@@ -1,5 +1,9 @@
 Note: this log is only for work done since the conversion for 1.x
 
+23 July 2007
++ RFE #1757050 - Added resizing code from Verdon
+
+
 Version 1.4.0
 ----------------------------------------------------------------
 19 April 2007
